<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_20"
        android:fitsSystemWindows="true"
        tools:context=".user.info.MemberInfoActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_42"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:id="@+id/rl_top"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/iv_back"
                android:layout_width="@dimen/dp_70"
                android:layout_height="match_parent">
                <ImageView
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_width="@dimen/dp_22"
                    android:layout_height="@dimen/dp_15"
                    android:src="@drawable/ic_union"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_101828"
                android:layout_centerInParent="true"
                android:text=""
                android:textSize="@dimen/sp_14"
                tools:ignore="RelativeOverlap"/>
        </RelativeLayout>
        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:id="@+id/srl_user_record"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="64dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.scwang.smart.refresh.header.ClassicsHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srlTextFailed="@string/user_refresh_failed"
                app:srlTextFinish="@string/user_refresh_success"
                app:srlTextPulling="@string/user_pull_down_to_refresh"
                app:srlTextRefreshing="@string/user_refreshing"
                app:srlTextRelease="@string/user_release_to_refresh"
                app:srlTextUpdate="@string/user_last_update" />
                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true"
                    android:scrollbars="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/dp_20"
                        android:paddingRight="@dimen/dp_20"
                        android:paddingTop="@dimen/dp_10"
                        android:paddingBottom="@dimen/dp_20">
                        <TextView
                            android:id="@+id/txt_title_top"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/sp_14"
                            android:textColor="@color/color_101828"
                            android:textStyle="bold"
                            android:visibility="gone"
                            android:layout_marginBottom="@dimen/dp_10"/>

                        <TextView
                            android:id="@+id/txt_content_top"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/sp_14"
                            android:textColor="@color/color_101828"
                            android:visibility="gone"
                            android:layout_marginBottom="@dimen/dp_10"/>

                        <LinearLayout
                            android:id="@+id/ll_policy_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                        </LinearLayout>

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>


        </com.scwang.smart.refresh.layout.SmartRefreshLayout>


        <!--        <androidx.appcompat.widget.AppCompatButton-->
        <!--            android:id="@+id/btn_save"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            android:enabled="false"-->
        <!--            android:textSize="@dimen/sp_14"-->
        <!--            android:paddingTop="@dimen/pt_14"-->
        <!--            android:paddingBottom="@dimen/pt_14"-->
        <!--            android:text="@string/user_save"-->
        <!--            android:gravity="center"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:background="@color/color_DE9DBA"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
