<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_20"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        tools:context=".user.info.MemberInfoActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_42"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:id="@+id/rl_top"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/iv_back"
                android:layout_width="@dimen/dp_70"
                android:layout_height="match_parent">
                <ImageView
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_width="@dimen/dp_22"
                    android:layout_height="@dimen/dp_15"
                    android:src="@drawable/ic_union"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"/>
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_101828"
                android:layout_centerInParent="true"
                android:text="@string/user_store_locations"
                android:textSize="@dimen/sp_16" />

        </RelativeLayout>


        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:id="@+id/srl_user_record"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="64dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.scwang.smart.refresh.header.ClassicsHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srlTextFailed="@string/user_refresh_failed"
                app:srlTextFinish="@string/user_refresh_success"
                app:srlTextPulling="@string/user_pull_down_to_refresh"
                app:srlTextRefreshing="@string/user_refreshing"
                app:srlTextRelease="@string/user_release_to_refresh"
                app:srlTextUpdate="@string/user_last_update" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:overScrollMode="never"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_42">
                            <RelativeLayout
                                android:id="@+id/img_pre"
                                android:layout_marginLeft="@dimen/dp_100"
                                android:layout_centerVertical="true"
                                android:layout_width="@dimen/dp_30"
                                android:layout_height="@dimen/dp_30">
                                <ImageView
                                    android:clickable="false"
                                    android:focusable="false"
                                    android:focusableInTouchMode="false"
                                    android:rotation="180"
                                    android:layout_centerInParent="true"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_arrow_right"/>
                            </RelativeLayout>

                            <TextView
                                android:id="@+id/txt_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:textColor="@color/color_101828"
                                android:textSize="@dimen/sp_18" />

                            <RelativeLayout
                                android:id="@+id/img_next"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="@dimen/dp_100"
                                android:layout_centerVertical="true"
                                android:layout_width="@dimen/dp_30"
                                android:layout_height="@dimen/dp_30">
                                <ImageView
                                    android:clickable="false"
                                    android:focusable="false"
                                    android:focusableInTouchMode="false"
                                    android:layout_centerInParent="true"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_arrow_right"/>
                            </RelativeLayout>
                        </RelativeLayout>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/image_location_store"/>


                </LinearLayout>

            </androidx.core.widget.NestedScrollView>
        </com.scwang.smart.refresh.layout.SmartRefreshLayout>


        <!--        <androidx.appcompat.widget.AppCompatButton-->
        <!--            android:id="@+id/btn_save"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            android:enabled="false"-->
        <!--            android:textSize="@dimen/sp_14"-->
        <!--            android:paddingTop="@dimen/pt_14"-->
        <!--            android:paddingBottom="@dimen/pt_14"-->
        <!--            android:text="@string/user_save"-->
        <!--            android:gravity="center"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:background="@color/color_DE9DBA"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
