<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_20"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        tools:context=".user.info.MemberInfoActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_42"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:id="@+id/rl_top"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/iv_back"
                android:layout_width="@dimen/dp_70"
                android:layout_height="match_parent">
                <ImageView
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_width="@dimen/dp_22"
                    android:layout_height="@dimen/dp_15"
                    android:src="@drawable/ic_union"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"/>
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_101828"
                android:layout_centerInParent="true"
                android:text="@string/user_edit_m_profile"
                android:textSize="@dimen/sp_16" />

        </RelativeLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/rl_top"
            app:layout_constraintBottom_toTopOf="@id/bottom_layout"

            android:background="@color/color_FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/user_tsg_phone_code"
                    android:textStyle="bold"
                    android:textColor="@color/color_101828"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_30"
                    android:textSize="24sp"/>

                    <TextView
                        android:layout_width="@dimen/dp_140"
                        android:layout_height="@dimen/dp_17"
                        android:text="@string/user_enter_your_mobile"
                        android:textSize="@dimen/sp_14"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:textColor="@color/color_101828"
                        android:layout_marginTop="@dimen/dp_24"
                        android:layout_marginBottom="@dimen/dp_8"/>
                <RelativeLayout
                    android:id="@+id/rl_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_user_form"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginRight="@dimen/dp_20"
                    android:paddingEnd="5dp">

                    <AutoCompleteTextView
                        android:id="@+id/edt_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:background="@drawable/bg_form_mobile"
                        android:hint="@string/user_enter_your_mobile"
                        android:textColor="@color/color_101828"
                        android:textColorHint="@color/color_99A1AF"
                        android:paddingStart="20dp"
                        android:singleLine="true"
                        android:completionThreshold="0"
                        android:dropDownHeight="wrap_content"
                        android:dropDownWidth="wrap_content"
                        android:cursorVisible="true"
                        android:inputType="text"
                        android:clickable="true"
                        android:focusable="true"
                        android:ellipsize="end"
                        android:scrollHorizontally="true"/>
                </RelativeLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


        <RelativeLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/color_F3F4F6">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textSize="@dimen/sp_14"
                android:paddingTop="@dimen/pt_14"
                android:paddingBottom="@dimen/pt_14"
                android:text="@string/user_save"
                android:gravity="center"
                android:textColor="@color/color_6A7282"
                android:background="@color/color_E5E7EB" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
